# regex

./: Cargo.toml  PERFORMANCE.md  README.md
examples/: shootout-regex-dna-replace.rs
regex-capi/: Cargo.toml
regex-capi/src/: error.rs  rure.rs
regex-debug/: Cargo.toml
regex-debug/src/: main.rs
src/: lib.rs  re_builder.rs  re_bytes.rs  re_set.rs  re_unicode.rs
